# SteamPoint

./: .gitignore  Memorial Descritivo - SteamPoint.docx  README.md  Readme.txt  Slide STEAMPOINT.pptx  app.py  descompact.py  main.ipynb  main.py  pyproject.toml  read.txt  start.py  steam_scraper.py  treatdata.py  treatdata.txt
.ipynb_checkpoints/: main-checkpoint.ipynb
DataCSV/: Readme.txt
