[project]
name = "steampoint"
version = "0.1.0"
description = "Análise e tratamento de dados de apps da steam."
authors = [
    {name = "XDChaves",email = "hpchavesxdr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
