[tool.poetry]
name = "steampoint"
version = "0.1.0"
description = "Análise e tratamento de dados de apps da steam."
authors = ["XDChaves <hpchavesxdr@gmail.com>","Salazar <gsaalcantara@gmail.com>"] 
readme = "README.md"
package-mode = false     

[tool.poetry.dependencies]
python = ">=3.12" 
pandas = ">=2.2.3,<3.0.0" 
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"] # <<< Correção importante! (ou apenas "poetry-core")
build-backend = "poetry.core.masonry.api"